# office-evaluator

./: .gitignore  Dockerfile.officeqa-agent  Dockerfile.officeqa-judge  README.md  a2a-scenario.toml  debug_llm.py  debug_output.txt  docker-compose.yml  generate_compose.py  logs.txt  original_executor.txt  pyproject.toml  record_provenance.py  sample.env  scenario.toml  test_rag.py  verify_local.py
.github/workflows/: run-scenario.yml
judge/src/: agent.py  executor.py  messenger.py  server.py
judge/tests/: test_scoring.py
participant/src/: executor.py  server.py
